bindings/csharp/src/Nclink.Core/Native.cs


        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_start")]
        internal static extern IntPtr HttpStart(uint port, IntPtr server, int withConfig);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_free")]
        internal static extern void HttpFree(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_port")]
        internal static extern int HttpPort(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_request_count")]
        internal static extern int HttpRequestCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_set_cors")]
        internal static extern void HttpSetCors(IntPtr handle, int enabled);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_http_route")]
        internal static extern int HttpRoute(IntPtr handle, byte[] method, byte[] path, IntPtr host);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_strdup")]
        internal static extern IntPtr Strdup(byte[] text);

        /* ----------------------------------------------------------- helpers -- */

        /// <summary>空终止的 UTF-8 字节串 → string（原生返回 NULL 时得到 null）。</summary>
        internal static string Utf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero)
            {
                return null;
            }
            int length = 0;
            while (Marshal.ReadByte(ptr, length) != 0)
            {
                length++;
            }
            if (length == 0)
            {
                return string.Empty;
            }
            byte[] buffer = new byte[length];
            Marshal.Copy(ptr, buffer, 0, length);
            return Encoding.UTF8.GetString(buffer);
        }

        /// <summary>把托管字符串复制成"原生调用期间有效"的 UTF-8 字节串。</summary>
        internal static byte[] Utf8Z(string text)
        {
            if (text == null)
            {
                return null;
            }
            byte[] bytes = Encoding.UTF8.GetBytes(text);
            byte[] buffer = new byte[bytes.Length + 1];
            Array.Copy(bytes, buffer, bytes.Length);
            return buffer;
        }

        /// <summary>取走原生 malloc 出来的字符串并释放它。</summary>
        internal static string TakeUtf8(IntPtr ptr)
        {
            string text = Utf8(ptr);
            if (ptr != IntPtr.Zero)
            {
                Free(ptr);
            }
            return text;
        }
    }
}
